fix: update ISSUES.md for a found env not consuming problem and udpate env example.